Restricted player count to 2 minimum and 4 maximum. Removed redundant variables. Fixed other warnings.